# mdfs-py

./: .gitignore  MANIFEST.in  README.md  example_mdfs_run.json  pyproject.toml  setup.py
data/: MDFS_Result_python_1D.json  MDFS_Result_python_2D.json  all_madelon_dat_py.csv  chisq_contrast.txt  chisq_log.txt  madelon.50.csv  madelon_50.csv  pairs.csv
examples/: example_computeIG.py  example_fit_p_values.py  example_mdfs.R  example_mdfs.py  example_mdfs_run.py
mdfs/: __init__.py  c.py  compute_max_ig.py  compute_tuples.py  fit_p_value.py  internal_common.py  run.py  utils.py
shared/interface/: common.h  compute_max_ig.cpp  compute_tuples.cpp  discretize.cpp  fit_p_value.cpp  fit_utils.cpp  free_helpers.cpp  gen_contrast_variables.cpp  get_suggested_range.cpp  get_suggested_range.h
shared/src/cpu/: PrintUtility.h
tools/: build_and_install_python_module.sh  run_python_example.sh
