[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdfs"
version = "1.5.2"
description = "A library for MultiDimensional Feature Selection (MDFS)"
readme = "README.md"
dependencies = ["numpy", "scipy", "statsmodels"]
keywords = ["feature selection", "classification", "machine learning", "information theory"]
authors = [
  {name = "Radosław Piliszek", email = "r.piliszek@uwb.edu.pl"},
]
maintainers = [
  {name = "Radosław Piliszek", email = "r.piliszek@uwb.edu.pl"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://www.mdfs.it/"
changelog = "https://www.mdfs.it/CHANGELOG"
